salesforce/objects/ActionEnablement__mdt.object
<CustomObject>
    <label>Action Enablement</label>
    <pluralLabel>Action Enablements</pluralLabel>
    <fields>
        <fullName>ActionName__c</fullName>
        <label>Action Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MaxPerUserPerDay__c</fullName>
        <label>Max Per User Per Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RequiresConfirm__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Requires Confirm</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FlowName__c</fullName>
        <label>Flow Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApexMethod__c</fullName>
        <label>Apex Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InputSchemaJson__c</fullName>
        <label>Input Schema JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OutputSchemaJson__c</fullName>
        <label>Output Schema JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AllowedFields__c</fullName>
        <label>Allowed Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>